app/ferroehr/src/system_log/snapshots/ferroehr__system_log__fhir__tests__fhir_patient_composition_read.snap
---
source: app/ferroehr/src/system_log/fhir.rs
assertion_line: 553
expression: v
---
{
  "resourceType": "AuditEvent",
  "meta": {
    "profile": [
      "https://profiles.ihe.net/ITI/BALP/StructureDefinition/IHE.BasicAudit.PatientRead"
    ]
  },
  "type": {
    "system": "http://terminology.hl7.org/CodeSystem/audit-event-type",
    "code": "rest",
    "display": "RESTful Operation"
  },
  "subtype": [
    {
      "system": "http://hl7.org/fhir/restful-interaction",
      "code": "read",
      "display": "read"
    },
    {
      "system": "urn:openehr:its-rest:operation",
      "code": "composition_get",
      "display": "composition_get"
    }
  ],
  "action": "R",
  "recorded": "2026-07-06T12:00:00Z",
  "outcome": "0",
  "agent": [
    {
      "type": {
        "coding": [
          {
            "system": "http://dicom.nema.org/resources/ontology/DCM",
            "code": "110152",
            "display": "Destination Role ID"
          }
        ]
      },
      "who": {
        "identifier": {
          "value": "john doe"
        }
      },
      "requestor": true,
      "network": {
        "address": "10.216.24.150",
        "type": "2"
      }
    },
    {
      "type": {
        "coding": [
          {
            "system": "http://dicom.nema.org/resources/ontology/DCM",
            "code": "110153",
            "display": "Source Role ID"
          }
        ]
      },
      "who": {
        "identifier": {
          "value": "ferroehr"
        }
      },
      "requestor": false,
      "network": {
        "address": "10.42.23.77",
        "type": "2"
      }
    }
  ],
  "source": {
    "site": "1f332a66-0000-0000-0000-000000000001",
    "observer": {
      "identifier": {
        "value": "ferroehr"
      }
    },
    "type": [
      {
        "system": "http://terminology.hl7.org/CodeSystem/security-source-type",
        "code": "4",
        "display": "Application Server"
      }
    ]
  },
  "entity": [
    {
      "what": {
        "identifier": {
          "value": "patient-42"
        }
      },
      "type": {
        "system": "http://terminology.hl7.org/CodeSystem/audit-entity-type",
        "code": "1",
        "display": "Person"
      },
      "role": {
        "system": "http://terminology.hl7.org/CodeSystem/object-role",
        "code": "1",
        "display": "Patient"
      }
    },
    {
      "what": {
        "identifier": {
          "value": "8fa1::ferroehr::1"
        }
      },
      "type": {
        "system": "http://terminology.hl7.org/CodeSystem/audit-entity-type",
        "code": "2",
        "display": "System Object"
      }
    }
  ]
}
